--- a/Patterns.html
+++ b/Patterns.html
@@ -1,46 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>F# Actor: Library for Actor based Programming
+    <title>Patterns
 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The F# Actor library.">
+    <meta name="description" content="F# Actor Framework">
     <meta name="author" content="Colin Bull">
 
-    <script src="http://code.jquery.com/jquery-1.8.0.js"></script>
-    <script src="http://code.jquery.com/ui/1.8.23/jquery-ui.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
 
-    <link type="text/css" rel="stylesheet" href="stylesheets/style.css" />
-    <script src="javascripts/tips.js" type="text/javascript"></script>
+    <link type="text/css" rel="stylesheet" href="/Fsharp.Actor/content/style.css" />
+    <script type="text/javascript" src="/Fsharp.Actor/content/tips.js"></script>
+    <style>
+        body {
+            font-family: Ovo, serif;
+        }
+        table.pre, pre.fssnip, pre {
+            white-space: pre-wrap;
+        }
+        table.pre td.lines {
+            display: none;
+        }
+    </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
+</head>
+<body>
     <div class="container">
-      <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="http://fsharp.org">fsharp.org</a></li>
-		  <li><a href="http://github.com/colinbull/Fsharp.Actor">github page</a></li>
-        </ul>
-        <h3 class="muted">F# Actor Library</h3>
-      </div>
-      <hr />
-      <div class="row">
-        <div class="span9" id="main">
-          <h1>Patterns</h1>
+        <div class="masthead">
+            <ul class="nav nav-pills pull-right">
+                <li><a href="http://fsharp.org">fsharp.org</a></li>
+                <li><a href="https://github.com/colinbull/Fsharp.Actor">github page</a></li>
+            </ul>
+            <h3 class="muted"><a href="/Fsharp.Actor/index.html">Fsharp.Actor</a></h3>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="span9" id="main">
+                
+<h1>Patterns</h1>
 
 <p>Create actors that represent a common coding pattern.</p>
+
 <h2>Dispatch</h2>
 
 <h2>Round robin</h2>
 
 <p>Round robin dispatch, distributes messages in a round robin fashion to its workers.</p>
-<pre class="fssnip">
+
+<table class="pre"><tr><td class="lines"><pre class="fssnip">
+<span class="l"> 1: </span>
+<span class="l"> 2: </span>
+<span class="l"> 3: </span>
+<span class="l"> 4: </span>
+<span class="l"> 5: </span>
+<span class="l"> 6: </span>
+<span class="l"> 7: </span>
+<span class="l"> 8: </span>
+<span class="l"> 9: </span>
+<span class="l">10: </span>
+<span class="l">11: </span>
+<span class="l">12: </span>
+<span class="l">13: </span>
+<span class="l">14: </span>
+<span class="l">15: </span>
+<span class="l">16: </span>
+<span class="l">17: </span>
+<span class="l">18: </span>
+</pre>
+</td>
+<td class="snippet"><pre class="fssnip">
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs1', 1)" onmouseover="showTip(event, 'fs1', 1)" class="i">createWorker</span> <span onmouseout="hideTip(event, 'fs2', 2)" onmouseover="showTip(event, 'fs2', 2)" class="i">i</span> <span class="o">=</span>
     <span onmouseout="hideTip(event, 'fs3', 3)" onmouseover="showTip(event, 'fs3', 3)" class="i">Actor</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs4', 4)" onmouseover="showTip(event, 'fs4', 4)" class="i">spawn</span> (<span onmouseout="hideTip(event, 'fs3', 5)" onmouseover="showTip(event, 'fs3', 5)" class="i">Actor</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs5', 6)" onmouseover="showTip(event, 'fs5', 6)" class="i">Options</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs6', 7)" onmouseover="showTip(event, 'fs6', 7)" class="i">Create</span>(<span onmouseout="hideTip(event, 'fs7', 8)" onmouseover="showTip(event, 'fs7', 8)" class="i">sprintf</span> <span class="s">&quot;</span><span class="s">workers</span><span class="s">/</span><span class="s">worker_</span><span class="s">%</span><span class="s">d</span><span class="s">&quot;</span> <span onmouseout="hideTip(event, 'fs2', 9)" onmouseover="showTip(event, 'fs2', 9)" class="i">i</span>)) (<span class="k">fun</span> (<span onmouseout="hideTip(event, 'fs8', 10)" onmouseover="showTip(event, 'fs8', 10)" class="i">actor</span><span class="o">:</span><span onmouseout="hideTip(event, 'fs9', 11)" onmouseover="showTip(event, 'fs9', 11)" class="i">IActor</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs10', 12)" onmouseover="showTip(event, 'fs10', 12)" class="i">int</span><span class="o">&gt;</span>) <span class="k">-&gt;</span>
         <span class="k">let</span> <span onmouseout="hideTip(event, 'fs11', 13)" onmouseover="showTip(event, 'fs11', 13)" class="i">log</span> <span class="o">=</span> (<span onmouseout="hideTip(event, 'fs8', 14)" onmouseover="showTip(event, 'fs8', 14)" class="i">actor</span> <span class="o">:?&gt;</span> <span onmouseout="hideTip(event, 'fs3', 15)" onmouseover="showTip(event, 'fs3', 15)" class="i">Actor</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs12', 16)" onmouseover="showTip(event, 'fs12', 16)" class="i">T</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs10', 17)" onmouseover="showTip(event, 'fs10', 17)" class="i">int</span><span class="o">&gt;</span>)<span class="o">.</span><span class="i">Log</span>
@@ -59,6 +94,10 @@
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs24', 43)" onmouseover="showTip(event, 'fs24', 43)" class="i">rrrouter</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs25', 44)" onmouseover="showTip(event, 'fs25', 44)" class="i">Patterns</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs26', 45)" onmouseover="showTip(event, 'fs26', 45)" class="i">Dispatch</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs27', 46)" onmouseover="showTip(event, 'fs27', 46)" class="i">roundRobin</span><span class="o">&lt;</span><span onmouseout="hideTip(event, 'fs10', 47)" onmouseover="showTip(event, 'fs10', 47)" class="i">int</span><span class="o">&gt;</span> <span class="s">&quot;</span><span class="s">workers</span><span class="s">/</span><span class="s">routers</span><span class="s">/</span><span class="s">roundRobin</span><span class="s">&quot;</span> <span onmouseout="hideTip(event, 'fs21', 48)" onmouseover="showTip(event, 'fs21', 48)" class="i">workers</span>
 
 [<span class="n">1..</span><span class="n">10</span>] <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs28', 49)" onmouseover="showTip(event, 'fs28', 49)" class="i">List</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs29', 50)" onmouseover="showTip(event, 'fs29', 50)" class="i">iter</span> ((<span class="o">&lt;--</span>) <span onmouseout="hideTip(event, 'fs24', 51)" onmouseover="showTip(event, 'fs24', 51)" class="i">rrrouter</span>)</pre>
+</td>
+</tr>
+</table>
+
 <h2>Shortest Queue</h2>
 
 <p>Shortest queue, attempts to find the worker with the shortest queue and distributes work to them. For constant time
@@ -66,12 +105,22 @@ work packs this will approximate to round robin routing.</p>
 
 <p>Using the workers defined above we can define another dispatcher but this time using the shortest queue
 dispatch strategy</p>
-<pre class="fssnip">
+
+<table class="pre"><tr><td class="lines"><pre class="fssnip">
+<span class="l">1: </span>
+<span class="l">2: </span>
+<span class="l">3: </span>
+</pre>
+</td>
+<td class="snippet"><pre class="fssnip">
 <span class="k">let</span> <span onmouseout="hideTip(event, 'fs30', 52)" onmouseover="showTip(event, 'fs30', 52)" class="i">sqrouter</span> <span class="o">=</span> <span onmouseout="hideTip(event, 'fs25', 53)" onmouseover="showTip(event, 'fs25', 53)" class="i">Patterns</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs26', 54)" onmouseover="showTip(event, 'fs26', 54)" class="i">Dispatch</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs31', 55)" onmouseover="showTip(event, 'fs31', 55)" class="i">shortestQueue</span> <span class="s">&quot;</span><span class="s">workers</span><span class="s">/</span><span class="s">routers</span><span class="s">/</span><span class="s">shortestQ</span><span class="s">&quot;</span> <span onmouseout="hideTip(event, 'fs21', 56)" onmouseover="showTip(event, 'fs21', 56)" class="i">workers</span>
 
 [<span class="n">1..</span><span class="n">100</span>] <span class="o">|&gt;</span> <span onmouseout="hideTip(event, 'fs28', 57)" onmouseover="showTip(event, 'fs28', 57)" class="i">List</span><span class="o">.</span><span onmouseout="hideTip(event, 'fs29', 58)" onmouseover="showTip(event, 'fs29', 58)" class="i">iter</span> ((<span class="o">&lt;--</span>) <span onmouseout="hideTip(event, 'fs30', 59)" onmouseover="showTip(event, 'fs30', 59)" class="i">sqrouter</span>)</pre>
+</td>
+</tr>
+</table>
 
-          <div class="tip" id="fs1">val createWorker : i:int -&gt; IActor<br /><br />Full name: Patterns.createWorker</div>
+<div class="tip" id="fs1">val createWorker : i:int -&gt; IActor<br /><br />Full name: Patterns.createWorker</div>
 <div class="tip" id="fs2">val i : int</div>
 <div class="tip" id="fs3">module Actor<br /><br />from FSharp.Actor</div>
 <div class="tip" id="fs4">val spawn : options:Actor.Options&lt;&#39;a&gt; -&gt; computation:(IActor&lt;&#39;a&gt; -&gt; Async&lt;unit&gt;) -&gt; IActor<br /><br />Full name: FSharp.Actor.Actor.spawn</div>
@@ -98,26 +147,31 @@ dispatch strategy</p>
 <div class="tip" id="fs25">module Patterns<br /><br />from FSharp.Actor</div>
 <div class="tip" id="fs26">module Dispatch<br /><br />from FSharp.Actor.Patterns</div>
 <div class="tip" id="fs27">val roundRobin&lt;&#39;a&gt; : name:string -&gt; refs:IActor [] -&gt; IActor<br /><br />Full name: FSharp.Actor.Patterns.Dispatch.roundRobin</div>
-<div class="tip" id="fs28">Multiple items<br />module List<br /><br />from Microsoft.FSharp.Collections<br /><br />--------------------<br />type List&lt;&#39;T&gt; =<br />&#160;&#160;| ( [] )<br />&#160;&#160;| ( :: ) of &#39;T * &#39;T list<br />&#160;&#160;interface IEnumerable<br />&#160;&#160;interface IEnumerable&lt;&#39;T&gt;<br />&#160;&#160;member Head : &#39;T<br />&#160;&#160;member IsEmpty : bool<br />&#160;&#160;member Item : index:int -&gt; &#39;T with get<br />&#160;&#160;member Length : int<br />&#160;&#160;member Tail : &#39;T list<br />&#160;&#160;static member Cons : head:&#39;T * tail:&#39;T list -&gt; &#39;T list<br />&#160;&#160;static member Empty : &#39;T list<br /><br />Full name: Microsoft.FSharp.Collections.List&lt;_&gt;</div>
+<div class="tip" id="fs28">Multiple items<br />module List<br /><br />from Microsoft.FSharp.Collections<br /><br />--------------------<br />type List&lt;&#39;T&gt; =<br />&#160;&#160;| ( [] )<br />&#160;&#160;| ( :: ) of Head: &#39;T * Tail: &#39;T list<br />&#160;&#160;interface IEnumerable<br />&#160;&#160;interface IEnumerable&lt;&#39;T&gt;<br />&#160;&#160;member Head : &#39;T<br />&#160;&#160;member IsEmpty : bool<br />&#160;&#160;member Item : index:int -&gt; &#39;T with get<br />&#160;&#160;member Length : int<br />&#160;&#160;member Tail : &#39;T list<br />&#160;&#160;static member Cons : head:&#39;T * tail:&#39;T list -&gt; &#39;T list<br />&#160;&#160;static member Empty : &#39;T list<br /><br />Full name: Microsoft.FSharp.Collections.List&lt;_&gt;</div>
 <div class="tip" id="fs29">val iter : action:(&#39;T -&gt; unit) -&gt; list:&#39;T list -&gt; unit<br /><br />Full name: Microsoft.FSharp.Collections.List.iter</div>
 <div class="tip" id="fs30">val sqrouter : IActor<br /><br />Full name: Patterns.sqrouter</div>
 <div class="tip" id="fs31">val shortestQueue : name:string -&gt; refs:seq&lt;IActor&gt; -&gt; IActor<br /><br />Full name: FSharp.Actor.Patterns.Dispatch.shortestQueue</div>
 
-        </div>
-        <div class="span3">
+            </div>
+            <div class="span3">
+                <ul class="nav nav-list" id="menu">
+                    <li class="nav-header">Fsharp.Actor</li>
+                    <li><a href="/Fsharp.Actor/index.html">Home page</a></li>
+                    <li class="divider"></li>
+                    <li><a href="https://www.nuget.org/packages/Fsharp.Actor">Get Library via NuGet</a></li>
+                    <li><a href="https://github.com/colinbull/Fsharp.Actor">Source Code on GitHub</a></li>
+                    <li><a href="https://github.com/colinbull/Fsharp.Actor/blob/master/LICENSE.md">License (Apache 2.0)</a></li>
+                    <li><a href="https://github.com/colinbull/Fsharp.Actor/blob/master/RELEASE_NOTES.md">Release Notes</a></li>
 
-          <ul class="nav nav-list" id="menu">
-            <li class="nav-header">F# Actor Library</li>
-            <li><a href="http://colinbull.github.com/Fsharp.Actor/">Home page</a></li>
-            <li class="divider"></li>
-            <li><a href="https://nuget.org/packages/Fsharp.Actor">Get Library via NuGet</a></li>
-            <li><a href="https://github.com/colinbull/Fsharp.Actor">Source Code on GitHub</a></li>
-            <li><a href="https://github.com/colinbull/Fsharp.Actor/blob/master/LICENSE.md">License (Apache 2.0)</a></li>
-          </ul>
-
+                    <li class="nav-header">F# Actor documentation</li>
+                    <li><a href="/Fsharp.Actor/Actor.html">Actors</a></li>
+                    <li><a href="/Fsharp.Actor/Supervision.html">Supervision</a></li>
+                    <li><a href="/Fsharp.Actor/Patterns.html">Patterns</a></li>
+                    <li><a href="/Fsharp.Actor/Remoting.html">Remoting</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
     <a href="https://github.com/colinbull/Fsharp.Actor"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
-  </body>
-  </html>
+</body>
+</html>
