--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/js/bootstrap.min.js"></script>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="/Fsharp.Actor/content/style.css" />
     <script type="text/javascript" src="/Fsharp.Actor/content/tips.js"></script>
     <style>
         body {
-            font-family: Ovo, serif;
+            font-family: Gudea, serif;
+            font-size: 15px;
         }
         table.pre, pre.fssnip, pre {
             white-space: pre-wrap;
         }
-        table.pre td.lines {
+        /*table.pre td.lines {
             display: none;
-        }
+        }*/
     </style>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -66,6 +67,13 @@
 
 <p>The library is available under Apache 2.0. For more information see the <a href="https://github.com/colinbull/Fsharp.Actor/blob/master/License.md" target="_blank">License file</a> in the GitHub repository.</p>
 
+<p><a name="14012311">&#160;</a></p>
+
+<h3>References</h3>
+
+<ul>
+</ul>
+
 
             </div>
             <div class="span3">
@@ -83,6 +91,8 @@
                     <li><a href="/Fsharp.Actor/Supervision.html">Supervision</a></li>
                     <li><a href="/Fsharp.Actor/Patterns.html">Patterns</a></li>
                     <li><a href="/Fsharp.Actor/Remoting.html">Remoting</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/Fsharp.Actor/reference/index.html">API Reference</a></li>
                 </ul>
             </div>
         </div>
